fix(tools): return ephemeral image artifacts
Close the ImageMagick bounty lifecycle gap by returning bounded Base64
artifacts before cleanup instead of persisting generated files in the caller
workspace. Purge every tool-created runtime file in finally, confine native
HOME/temp/cache paths, reject mismatched or oversized output, and keep batches
atomic under a 10 MB aggregate response ceiling.

Replace publication/race tests with hostile artifact, size, root-symlink,
input-swap, timeout, interruption, and cleanup coverage. Preserve Bryce's
existing source and bounty authorship; this is an append-only compliance repair
for issue #14.